--- a/build-IBClient-Desktop_Qt_5_12_12_MinGW_32_bit-Release/Makefile
+++ b/build-IBClient-Desktop_Qt_5_12_12_MinGW_32_bit-Release/Makefile
@@ -219,6 +219,7 @@ Makefile: ../IBClient/IBClient.pro ../../../../Qt/5.12.12/mingw73_32/mkspecs/win
 		../../../../Qt/5.12.12/mingw73_32/mkspecs/features/qt_config.prf \
 		../../../../Qt/5.12.12/mingw73_32/mkspecs/win32-g++/qmake.conf \
 		../../../../Qt/5.12.12/mingw73_32/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		../../../../Qt/5.12.12/mingw73_32/mkspecs/features/exclusive_builds.prf \
 		../../../../Qt/5.12.12/mingw73_32/mkspecs/features/toolchain.prf \
 		../../../../Qt/5.12.12/mingw73_32/mkspecs/features/default_pre.prf \
@@ -404,6 +405,7 @@ Makefile: ../IBClient/IBClient.pro ../../../../Qt/5.12.12/mingw73_32/mkspecs/win
 ../../../../Qt/5.12.12/mingw73_32/mkspecs/features/qt_config.prf:
 ../../../../Qt/5.12.12/mingw73_32/mkspecs/win32-g++/qmake.conf:
 ../../../../Qt/5.12.12/mingw73_32/mkspecs/features/spec_post.prf:
+.qmake.stash:
 ../../../../Qt/5.12.12/mingw73_32/mkspecs/features/exclusive_builds.prf:
 ../../../../Qt/5.12.12/mingw73_32/mkspecs/features/toolchain.prf:
 ../../../../Qt/5.12.12/mingw73_32/mkspecs/features/default_pre.prf:
